--- a/package.json
+++ b/package.json
@@ -9,15 +9,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
     "@expo/webpack-config": "~19.0.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.10",
     "@react-navigation/native-stack": "^6.9.18",
     "axios": "^1.6.7",
-    "expo": "~50.0.7",
+    "expo": "^51.0.8",
     "expo-checkbox": "~2.7.0",
-    "expo-font": "~11.10.3",
+    "expo-font": "~12.0.5",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-module-scripts": "^3.4.1",
     "expo-status-bar": "~1.11.1",
@@ -26,7 +29,9 @@
     "react-native": "0.73.4",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "react-native-svg": "15.2.0",
+    "expo-asset": "~10.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
